# it-camp

backend/auth/src/: alembic.ini  env.example  main.py  pyproject.toml  run.sh
backend/auth/src/config/: app_config.py
backend/auth/src/docker/: Dockerfile
backend/auth/src/dto/: auth_dto.py  user_dto.py
backend/auth/src/interfaces/: base_repository.py  base_uow.py
backend/auth/src/migrations/: env.py
backend/auth/src/repositories/: token_repository.py  user_repository.py
backend/auth/src/services/: auth_service.py  user_service.py
backend/auth/src/tools/: consts.py  di_container.py  enums.py  jwt_helper.py  password_helper.py  validators.py
backend/auth/src/uow/: alchemy_redis_uow_composite.py  redis_uow.py
backend/bff/src/: env.template  main.py  pyproject.toml
backend/bff/src/config/: app_config.py
backend/bff/src/dto/: auth_dto.py  http_dto.py  processor_dto.py  report_dto.py  user_dto.py
backend/bff/src/interfaces/: base_factory.py  base_repository.py
backend/bff/src/repositories/: aiohttp_repository.py
backend/bff/src/services/: auth_service.py  processor_service.py  reporter_service.py  user_service.py
backend/bff/src/tools/: consts.py  di_container.py  enums.py
backend/integration/src/: env.template  pyproject.toml
backend/integration/src/config/: app_config.py
backend/integration/src/docker/: Dockerfile
backend/integration/src/interfaces/: base_enum.py  base_service.py
backend/integration/src/migrations/: env.py
backend/processor/src/: env.template  example.env  main.py  pyproject.toml
backend/processor/src/config/: app_config.py
backend/processor/src/docker/: Dockerfile
backend/processor/src/dto/: defect_dto.py  history_dto.py  magnetogram_dto.py  processor_dto.py  structural_unit_dto.py
backend/processor/src/interfaces/: base_processor.py  base_repository.py  base_uow.py  base_util.py
backend/processor/src/repositories/: history_repository.py  magnetogram_repository.py
backend/processor/src/services/: history_service.py  processor_service.py
backend/processor/src/tools/: consts.py  di_container.py  enum_utils.py  enums.py  exceptions.py
backend/reporter/src/: env.template  main.py  pyproject.toml
backend/reporter/src/config/: app_config.py
backend/reporter/src/docker/: Dockerfile
backend/reporter/src/dto/: report_dto.py
backend/reporter/src/interfaces/: base_schema.py
backend/reporter/src/repositories/: report_repository.py
backend/reporter/src/services/: reporter_service.py
backend/reporter/src/tools/: di_container.py  enums.py
ci/: docker-compose.yaml
(+75 files in other folders)
