[tool.poetry]
name = "auth"
version = "1.0.0"
description = "Сервис аутентификации"
authors = ["vladushka2000"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
pydantic-settings = "^2.4.0"
asyncpg = "^0.29.0"
aioredis = "^2.0.1"
sqlalchemy = "^2.0.32"
dependency-injector = "^4.41.0"
redis = "^5.0.8"
pyjwt = "^2.9.0"
uvicorn = "^0.30.6"
passlib = "^1.7.4"
bcrypt = "^4.2.0"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
